# VocabCLI

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE.md  MANIFEST.in  NOTES.md  README.md  REFERENCES.md  VocabularyBuilder.db  WordLists.xlsx  foranay.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  show_list_arguments.xlsx  todo.md
.github/workflows/: black.yml
Diagrams/: ContextDiagram.drawio  DataFlowDiagram.drawio  UseCaseDiagram.drawio
VocabCLI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/: .coverage  Graph.py  MANUAL.md  VocabularyBuilder.csv  VocabularyBuilder.db  VocabularyBuilder.py  VocabularyCLI.py
app/modules/: About.py  Banner.py  Carousel.py  Database.py  Dictionary.py  Domains.py  Exceptions.py  Flashcard.py  Graph.py  ImportExport.py  NLP.py  Quotes.py  RSS.py  Report.py  Spelling.py  Study.py  Thesaurus.py  Utils.py  VocabularyBuilder.db  WordCollections.py  commonly_confused.csv  delete.py  domains.csv  emojis.txt  imp.md
assets/logos/: logo_info.txt
college-docs/: Project Summary [Atharva + Anay].md  VIVA QUESTIONS.md
docs/: app.modules.rst  conf.py  index.rst  modules.rst  user_manual.md  vocabCLI.modules.rst  vocabCLI.rst
docs/htmlcov/: d_7be41d78ec886052_test_VocabularyBuilder_py.html  d_9b7b1f9db13f9215_About_py.html  d_9b7b1f9db13f9215_Banner_py.html  d_9b7b1f9db13f9215_Flashcard_py.html  d_9b7b1f9db13f9215_RSS_py.html
exports/: VocabularyBuilder.csv
project_stuff/UML Diagrams/: .$AcitivityDiagram.drawio.bkp  .$AcitivityDiagram.drawio.dtmp  .$ActivityDiagram.drawio.bkp  .$ContextDiagram.drawio.bkp  .$ContextDiagram.drawio.dtmp  .$ContextDiagram.drawio_1.dtmp  .$ContextDiagram.drawio_2.dtmp  .$DataFlowDiagram.drawio.bkp  .$DataFlowDiagram.drawio.dtmp  .$UseCaseDiagram.drawio.bkp  .$UseCaseDiagram.drawio.dtmp  AcitivityDiagram.drawio  ActivityDiagram.drawio  ClassDiagram.drawio  ContextDiagram.drawio  DataFlowDiagram.drawio  SequenceDiagram.drawio  UseCaseDiagram.drawio
src/VocabularyBuilder/: Database.py  Dictionary.py  DictionaryUtils.py  VocabularyBuilder.db  VocabularyBuilder.py  VocabularyBuilderCLI.db  test_VocabularyBuilder.py
src/vocabCLI/: Database.py  Dictionary.py  Flashcard.py  Graph.py  ImportExport.py  NLP.py  Quotes.py  RSS.py  Report.py  Study.py  Utils.py  WordCollections.py  __init__.py  __main__.py
tests/: conftest.py  tempCodeRunnerFile.py  test_NLP.py  test_RSS.py  test_VocabularyBuilder.py  test_clear.py  test_define.py  test_delete.py  test_favorite.py  test_graph.py  test_history.py  test_import_export.py  test_learn.py  test_list.py  test_master.py  test_misc.py  test_quiz.py  test_quote.py  test_random.py  test_rate.py  test_revise.py  test_tag.py  test_thesaurus.py
tests/htmlcov/: VocabularyCLI_py.html  d_7be41d78ec886052_conftest_py.html  d_7be41d78ec886052_test_NLP_py.html  d_7be41d78ec886052_test_RSS_py.html  d_7be41d78ec886052_test_clear_py.html  d_7be41d78ec886052_test_define_py.html  d_7be41d78ec886052_test_delete_py.html  d_7be41d78ec886052_test_favorite_py.html  d_7be41d78ec886052_test_graph_py.html  d_7be41d78ec886052_test_history_py.html  d_7be41d78ec886052_test_import_export_py.html  d_7be41d78ec886052_test_learn_py.html  d_7be41d78ec886052_test_list_py.html  index.html  (+26 more)
vocabCLI/: .coverage  VocabularyBuilder.db  __main__.py  quiz_history.csv  vocabCLI.py  vocabCLI.spec
vocabCLI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+103 files in other folders)
