[tool.poetry]
name = "VocabularyBuilderCLI"
version = "0.1.0"
description = "Lightweight CLI for Dictionary Lookups, Vocabulary Building, Quote Saving and enhancing Knowledge Base. Supported with Rich Markup, Graph Reporting and Flashcard Generation"
authors = ["Atharva Shah <HighnessAtharva@gmail.com>","Anay Deshpande <anaydesh1234@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
VocabularyBuilderCLI = "VocabularyBuilderCLI.VocabularyBuilder:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"