[project]
name = "vocabCLI"
version = "0.0.15"
description = "A stylish and modern CLI to help you build your vocabulary and manage your words."
keywords = [
    "python",
    "vocabulary",
    "cli",
    "dictionary",
    "flashcards",
    "quotes",
    "knowledgebase",
    "rich",
    "richmarkup",
    "graph",
    "reporting",
    "flashcard"
]
authors = [
    { name = "Atharva Shah", email = "HighnessAtharva@gmail.com" },
    { name = "Anay Deshpande", email = "anaydesh1234@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "bs4",
    "click",
    "configparser",
    "dateparser",
    "feedparser",
    "fpdf",
    "lxml",
    "matplotlib",
    "nltk",
    "numpy",
    "pandas",
    "Pillow",
    "playsound==1.2.2",
    "pyspellchecker",
    "requests",
    "rich",
    "seaborn",
    "spacy",
    "spacy-loggers",
    "spacytextblob",
    "textblob",
    "textstat",
    "tk",
    "torch",
    "torchaudio",
    "torchvision",
    "typer",
    "typer[all]"
]

[project.scripts]
vocab = "vocabCLI.__main__:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
