[metadata]
name = VocabCLI
version = 0.0.8-dev,
author = Atharva Shah, Anay Deshpande
author_email = HighnessAtharva@gmail.com, anaydesh1234@gmail.com
description=A stylish and modern CLI to look up words, save quotes and build vocabulary and perform Natural Language Processing with ease.
long_description=file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/VocabCLI/VocabCLI
license= MIT 
keywords=python, vocabulary, cli, dictionary, flashcards, quotes, knowledgebase, rich, richmarkup, graph, reporting, flashcard

classifiers=
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    vocab = vocabCLI.__main__:app


